# RTv1

./: .gitmodules  CMakeLists.txt  Makefile  rtv1
CMakeModules/: FindLibM.cmake  FindOpenCL.cmake  FindPackageHandleStandardArgs.cmake
inc/: parser.h  parser_defines.h  rtv1.h
scenes/: scene.rt
src/: a.out  camera_manipulator.c  event_handler.c  json_validation.c  json_validation_scene_data.c  light_lst.c  lightning_calculation.c  load_object.c  load_scene_data.c  main.c  matrix_adapter.c  normal_calculation.c  object_lst.c  object_managment.c  parse_utilities.c  ray_handler.c  renderer.c  rotate_utilities.c  rt.c  scene_parser.c  vector_operations.c
